--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </footer> -->
 
-    <!-- <script src="scripts/misiones.js"></script> -->
+    <script src="scripts/misiones.js"></script>
     <script src="scripts/modal.js"></script>
 </body>
 </html>
