--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/misiones.css">
     <link rel="stylesheet" href="styles/modal.css">
+    <link rel="stylesheet" href="styles/header.css">
     <!-- <link rel="stylesheet" href="styles/footer.css"> -->
     <title>Meditite</title>
 </head>
 <body>
     <header>
-        <h1>Sesiones de misiones del grupo</h1>
+        <h1>Titulo por definir</h1>
     </header>
 
     <div id="misiones-header">
