--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
     <section id=""></section>
 
-    <!-- <footer>
+    <footer>
         <div>
             <h1>FOOTER</h1>
         </div>
-    </footer> -->
+    </footer>
     <script src="scripts/modal.js"></script>
     <!-- <script src="scripts/misiones.js"></script> -->
     
